# braindrop

./: .gitignore  CONTRIBUTING.md  ChangeLog.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yaml  style-lint-and-test.yaml
.posting/: README.md
.sandbox/: delete_a_raindrop.py  update_a_raindrop.py
src/braindrop/: __init__.py  __main__.py
src/braindrop/app/: __init__.py  app.py  braindrop.py  commands.py
src/braindrop/app/commands/: __init__.py  collection.py  collections.py  commands.py  commands_provider.py  filtering.py  main.py  raindrop.py  tags.py
src/braindrop/app/data/: __init__.py  config.py  local.py  raindrops.py
src/braindrop/app/messages/: __init__.py  base_command.py  commands.py
src/braindrop/app/providers/: collections.py  tags.py
src/braindrop/app/screens/: __init__.py  downloading.py  help.py  main.py  raindrop_input.py  search_input.py
src/braindrop/app/suggestions/: tags.py
src/braindrop/app/widgets/: __init__.py  extended_option_list.py  group.py  groups.py  navigation.py  preserved_highlight.py  raindrop_details.py  raindrops_view.py
src/braindrop/raindrop/: __init__.py  api.py  client.py  collection.py  raindrop.py  tag.py  user.py
src/unit/: test_tags.py
tests/unit/: test_raindrop.py  test_raindrops.py  test_special_collections.py  test_tag_suggestions.py  test_tags.py
