[project]
name = "braindrop"
version = "0.0.1"
description = "Coming soon"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
license = { text = "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"}
dependencies = [
    "httpx>=0.27.2",
    "textual>=0.87.1",
    "xdg-base-dirs>=6.0.2",
    "pytz>=2024.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "textual-dev>=1.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/braindrop"]

[project.scripts]
braindrop = "braindrop.__main__:main"
